--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ jobs:
     env:
       DOCKER_REGISTRY: ${{ secrets.MY_DOCKER_REGISTRY }}
       DOCKER_IMAGE: zwaveme
-      DOCKER_TARGET_PLATFORM: linux/arm64
+      DOCKER_TARGET_PLATFORM: linux/aarch64
     steps:
     - name: Checkout the code
       uses: actions/checkout@v2
